refactor: update project URL handling in bug bash campaign workflow

--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -1440,9 +1440,9 @@ jobs:
           ## Steps
           
           1. **Determine the project to use:**
-             - If `${GH_AW_EXPR_E6A2FDC7}` is provided, use that exact URL in all `update-project` safe outputs
-             - Otherwise, calculate the project name using the format "Bug Bash YYYY - WNN" where YYYY is the current year and WNN is the ISO week number with leading zero (e.g., "Bug Bash 2025 - W46" for week 46)
-             - **CRITICAL**: The format must have spaces around the dash: "Bug Bash 2025 - W46" (not "Bug Bash 2025-W46")
+             - **REQUIRED**: Use the exact project URL from `${GH_AW_EXPR_E6A2FDC7}` in all `update-project` safe outputs
+             - The project URL must be provided as input - this workflow does not support automatic project selection by name
+             - Use the URL exactly as provided without modification
              - The project must already exist - do not attempt to create it. Only add items to existing projects.
           2. Use the GitHub MCP server tools (issues toolset) to fetch recent open issues (last 30 days) that have at least one of these labels: `bug`, `defect`, or `regression`. Filter out:
              - Issues already on the board
@@ -1481,7 +1481,7 @@ jobs:
              - If field exists but missing required options, attempt to add the missing options
              - **If field operations fail or are not supported:** Log the error in the summary and proceed with item addition anyway (the safe-output handler will handle field creation/validation)
           
-          7. For each selected issue emit an `update-project` safe output using the project from step 1 (either the provided URL or the calculated name with spaces around the dash). Use the projects toolset from the GitHub MCP server to interact with the project board. Safe output fields:
+          7. For each selected issue emit an `update-project` safe output using the project URL from step 1. Use the projects toolset from the GitHub MCP server to interact with the project board. Safe output fields:
              - Status: "To Do"
              - Priority: (from classification above)
              - Complexity: (from classification above)
@@ -1519,7 +1519,7 @@ jobs:
           ```json
           {
             "type": "update-project",
-            "project": "Bug Bash 2025 - W46",
+            "project": "https://github.com/users/monalisa/projects/42",
             "content_type": "issue",
             "content_number": 123,
             "fields": {
@@ -1532,7 +1532,7 @@ jobs:
           }
           ```
           
-          **Important:** The `project` field can be either a **project name** (e.g., "Bug Bash 2025 - W46") or a **project URL** (e.g., "https://github.com/users/monalisa/projects/42"). When a URL is provided as input, use it directly.
+          **Important:** The `project` field must be a **project URL** (e.g., "https://github.com/users/monalisa/projects/42"). Use the exact URL provided in the workflow input without modification.
           
           Note: The `Classification` field is the concatenated string `Priority|Impact|Complexity` for easy sorting and filtering.
           
@@ -1540,7 +1540,7 @@ jobs:
           ````markdown
           # Bug Bash Weekly Campaign Summary
           
-          **Project**: <CALCULATED_PROJECT_NAME> (e.g., Bug Bash 2025 - W46)
+          **Project**: <PROJECT_URL>
           **Fields Created/Updated**: <LIST_OF_FIELDS> (or 'None - all fields existed')
           **Scanned**: <SCANNED_COUNT> | **Added**: <ADDED_COUNT> | **Skipped**: <SKIPPED_COUNT>
           
@@ -1558,7 +1558,7 @@ jobs:
           <Comma separated issue numbers or 'None'>
           
           ## Configuration
-          - Project URL: ${GH_AW_EXPR_E6A2FDC7} (or calculated from date)
+          - Project URL: ${GH_AW_EXPR_E6A2FDC7}
           - Lookback days: 30
           - Token scope issues: <YES/NO if encountered>
           ````
